// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renderer:Collapse 1`] = `
<div>
  <div
    class="cxd-CollapseGroup"
    data-role="container"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow-wrap"
        >
          <icon-mock
            classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow-wrap"
        >
          <icon-mock
            classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow-wrap"
        >
          <icon-mock
            classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper in"
        style="height: 0px;"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. Renderer:Collapse with expandIcon & expandIconPosition & showArrow 1`] = `
<div>
  <div
    class="cxd-CollapseGroup icon-position-right"
    data-role="container"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <i
          class="caret-right cxd-Collapse-icon-tranform cxd-Collapse-icon-tranform fa fa-caret-right"
        />
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse"
    >
      <div
        class="cxd-Collapse-header"
      >
        <i
          class="caret-right cxd-Collapse-icon-tranform cxd-Collapse-icon-tranform fa fa-caret-right"
        />
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. Renderer:Collapse with disabled & panel nesting 1`] = `
<div>
  <div
    class="cxd-CollapseGroup"
    data-role="container"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow-wrap"
        >
          <icon-mock
            classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <div
              class="cxd-CollapseGroup"
              data-role="container"
            >
              <div
                class="cxd-Collapse is-active"
              >
                <div
                  class="cxd-Collapse-header"
                >
                  <span
                    class="cxd-Collapse-arrow-wrap"
                  >
                    <icon-mock
                      classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
                      icon="right-arrow-bold"
                    />
                  </span>
                  <span
                    class="cxd-TplField fr-view"
                  >
                    <span>
                      嵌套面板标题
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-Collapse-contentWrapper"
                >
                  <div
                    class="cxd-Collapse-body"
                  >
                    <div
                      class="cxd-Collapse-content"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          嵌套面板内容
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse cxd-Collapse--disabled lastOne"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow-wrap"
        >
          <icon-mock
            classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
